--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.5",
-    "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@tinymce/tinymce-react": "^5.1.1",
@@ -51,6 +50,9 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.4.8",
+    "@types/hoist-non-react-statics": "^3.3.5",
+    "@types/json-schema": "^7.0.15",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0"
   }
